2005-04-28    <layer@HOBART>

	* loadem.cl: add :nfs-telnet-server and :nfs-profiling features to
	  aid in debugging
	* main.cl: #+nfs-debug -> #+nfs-telnet-server
	* nfs.cl: version printing is more verbose

2005-04-25    <layer@HOBART>

    version changed to 3.99, in anticipation of the 4.0 release

	* attr.cl: format -> logit
	* configure.cl: logging
	* dir.cl: format -> logit
	* loadem.cl:
	- "main" needs to be before "nfs"
	- added telnet module
	* main.cl:
	- format -> logit
	- start telnet server (in debug mode only)
	* mountd.cl: format -> logit
	* nfs-shared.cl: logging to file support
	* nfs.cl: format -> logit
	* nfs.nsi: remove old compressor comment
	* portmap.cl: format -> logit
	* sunrpc.cl: format -> logit
	* (NEW) telnet.cl: telnet server
	* xdr.cl: format -> logit

2005-04-08    <layer@HOBART>

	* loadem.cl: commented out :nfs-debug feature -- if defined it
	  will give a stack trace at the point of error
	* nfs.cl (define-nfs-proc): add code, under #+nfs-debug, that
	  gives a stack trace on error

2005-04-04    <Ahmon Dancy@GOBY>

	* openfile.cl/attr.cl: Changed some equal hash tables back to eq
	since bug14795/bug14692 are resolved.

	* fhandle.cl
	 * Define new error condition 'illegal-filename-error'
	 * (sanity-check-filename): Use new error condition for illegal
	filenames.

	* nfs.cl (xdr-sattr-to-struct-sattr): If any of mode, uid, gid, or
	size are #xffffffff, treat them at nil (unspecified).

	******

	* First commit for NFSv3 support.  Only notable non-NFSv3 specific
	changes noted here:

	* main.cl: Added 'debugmain' function for ease of starting up the
	server while developing/debugging.

	* portmap.cl: with-port-mapper-mapping now allows the 'vers'
	parameter to be a list.

	* xdr.cl: (Hopefully) performance optimizations.  Added xdr-hyper
	and xdr-unsigned-hyper support.  Increased *xdrdefaultsize* to
	1024.
	
2005-03-09  Kevin Layer  <layer@gemini>

	* nfs.cl: change version to 3.1
